@@ -16,7 +16,7 @@ import ErrorCode
 from dq2.clientapi import DQ2
 from dq2.filecatalog.FileCatalogUnknownFactory import FileCatalogUnknownFactory
 from dq2.filecatalog.FileCatalogException import FileCatalogException
-from rucio.common.exception import FileConsistencyMismatch,DataIdentifierNotFound,UnsupportedOperation
+from rucio.common.exception import FileConsistencyMismatch,DataIdentifierNotFound,UnsupportedOperation,InvalidPath
 
 from DDM import rucioAPI
 
@@ -423,6 +423,7 @@ class AdderAtlasPlugin (AdderPluginBase):
                     RucioFileCatalogException,
                     FileConsistencyMismatch,
                     UnsupportedOperation,
+                    InvalidPath,
                     exceptions.KeyError):
                 # fatal errors
                 errType,errValue = sys.exc_info()[:2]
